# ccm.cmake

./: README.md
cmake/: cc_flink.cmake  cc_module.cmake
example/: CMakeLists.txt  README.md
example/cmake/: cc_flink.cmake  cc_module.cmake
example/lib/: CMakeLists.txt
example/lib/bar/: CMakeLists.txt
example/lib/bar/src/: bar.cc
example/lib/baz/: CMakeLists.txt  baz.h
example/lib/foo/: CMakeLists.txt
example/lib/qux/: CMakeLists.txt
example/lib/qux/include/: qux.h
example/lib/qux/src/: qux.cc
example/main/: CMakeLists.txt  main.cc
